--- a/app/src/main/res/layout/fragment_text.xml
+++ b/app/src/main/res/layout/fragment_text.xml
@@ -44,7 +44,7 @@
         app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent" />
     <Spinner
-        android:id="@+id/textChoose"
+        android:id="@+id/regtextChoose"
         android:layout_width="181dp"
         android:layout_height="56dp"
         android:layout_marginStart="24dp"
@@ -77,7 +77,7 @@
         android:tint="?attr/colorAccent"
         app:layout_constraintBottom_toTopOf="@+id/translatedTv"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textChoose"
+        app:layout_constraintStart_toEndOf="@+id/regtextChoose"
         app:layout_constraintTop_toBottomOf="@+id/inputToTranslate"
-        app:srcCompat="@drawable/translate" />
+        app:srcCompat="@drawable/double_down_64px" />
 </androidx.constraintlayout.widget.ConstraintLayout>
