--- a/app/src/main/res/layout/fragment_stats.xml
+++ b/app/src/main/res/layout/fragment_stats.xml
@@ -6,6 +6,52 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/black">
+
+    <TextView
+        android:id="@+id/imageStatsCount"
+        android:layout_width="360dp"
+        android:layout_height="106dp"
+        android:layout_marginBottom="84dp"
+        android:fontFamily="@font/bungee"
+        android:text="0"
+        android:textAlignment="center"
+        android:textColor="?attr/colorAccent"
+        android:textSize="36sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/regTransStats3"
+        android:layout_width="360dp"
+        android:layout_height="106dp"
+        android:layout_marginBottom="24dp"
+        android:fontFamily="@font/bungee"
+        android:text="Image to Text"
+        android:textAlignment="center"
+        android:textColor="?attr/colorAccent"
+        android:textSize="36sp"
+        app:layout_constraintBottom_toTopOf="@+id/imageStatsCount"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textStatsCount"
+        android:layout_width="360dp"
+        android:layout_height="106dp"
+        android:layout_marginBottom="24dp"
+        android:fontFamily="@font/bungee"
+        android:text="0"
+        android:textAlignment="center"
+        android:textColor="?attr/colorAccent"
+        android:textSize="36sp"
+        app:layout_constraintBottom_toTopOf="@+id/regTransStats3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <ImageView
         android:id="@+id/statsLogo"
         android:layout_width="wrap_content"
@@ -15,13 +61,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/icons8_google_translate_64px_1" />
+
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="34dp"
-        android:layout_height="16dp"
-        android:text="stats"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/textStats"
+        android:layout_width="360dp"
+        android:layout_height="106dp"
+        android:layout_marginTop="120dp"
+        android:fontFamily="@font/bungee"
+        android:text="Text to Text"
+        android:textAlignment="center"
+        android:textColor="?attr/colorAccent"
+        android:textSize="36sp"
+        app:layout_constraintBottom_toTopOf="@+id/textStatsCount"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.517" />
 </androidx.constraintlayout.widget.ConstraintLayout>
